tests/baselines/reference/voidConstructor.errors.txt
==== tests/cases/compiler/voidConstructor.ts (1 errors) ====
    var foo:{ new ( ): void; }
              ~~~~~~~~~~~~~
!!! error TS2133: Constructors cannot have a return type of 'void'.
    